--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,66 @@
-functools
-joblib==1.5.1
-json==2.0.9
-matplotlib==3.6.3
-numpy==1.24.0
-os
-pandas==1.5.3
-requests==2.31.0
-scikit-learn
-scipy==1.14.1
-seaborn==0.11.2
-statsmodels==0.13.5
-time
-warnings
-xgboost==1.4.2
+# ===================================================
+# German Gas & LNG Market Modeling - Requirements
+# ===================================================
+# Core Data Science & Machine Learning
+numpy>=1.21.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+statsmodels>=0.13.0
+
+# Machine Learning Models
+lightgbm>=3.3.0
+xgboost>=1.5.0
+catboost>=1.0.0
+
+# Explainable AI & Interpretability
+shap>=0.40.0
+interpret>=0.2.0
+
+# Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+plotly>=5.0.0
+ipywidgets>=7.6.0
+
+# Time Series Analysis
+pmdarima>=2.0.0
+prophet>=1.0.0
+
+# Data Processing & Utilities
+openpyxl>=3.0.0  # For Excel file handling
+requests>=2.25.0  # For API data fetching
+beautifulsoup4>=4.9.0  # For web scraping (if needed)
+lxml>=4.6.0  # XML parsing
+
+# Jupyter & Development
+jupyter>=1.0.0
+ipython>=7.0.0
+notebook>=6.4.0
+
+# Configuration & Logging
+pyyaml>=5.4.0
+python-dotenv>=0.19.0
+
+# Optional: Advanced Time Series
+arch>=5.0.0  # For volatility modeling
+tsfresh>=0.18.0  # For automated feature engineering
+
+# Optional: Dashboard & Deployment
+streamlit>=1.0.0  # For creating web dashboards
+fastapi>=0.68.0  # For API deployment
+uvicorn>=0.15.0  # ASGI server
+
+# Optional: Database Integration
+sqlalchemy>=1.4.0
+psycopg2-binary>=2.9.0  # PostgreSQL adapter
+
+# Optional: Cloud Storage
+boto3>=1.20.0  # AWS S3 access
+google-cloud-storage>=2.0.0  # GCP storage
+
+# Code Quality & Testing
+pytest>=6.0.0
+black>=21.0.0
+flake8>=3.9.0
+pre-commit>=2.15.0
